--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Studenten</title>
+</head>
+<body>
 <div id="timerbox"></div>
 <script type="text/javascript" src="http://www.raknatid.se/ner/yourtimer.js"></script>
 <script type="text/javascript">
 setTimer(2021,5,10,13,37,'sTUDENTEN','000000','FFFFFF','large');
 </script>
+</body>
+</html>
