--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Studenten</title>
 </head>
 <body>
+	<h1>Kasper</h1>
 <div id="timerbox"></div>
 <script type="text/javascript" src="http://www.raknatid.se/ner/yourtimer.js"></script>
 <script type="text/javascript">
