--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html>
 <head>
 	<title>Studenten</title>
+	<style type="text/css">
+	h1 {
+		color: black;
+		background-color: red;
+	}
+	</style>
 </head>
 <body>
-	<h1>Kasper</h1>
-<center><div id="timerbox"></div></center>
+	<center><h1>Kasper</h1>
+<div id="timerbox"></div></center>
 <!--<script type="text/javascript" src="http://www.raknatid.se/ner/yourtimer.js"></script>-->
 	<script type="text/javascript">
 	function setTimer(year,month,day,hour,minute,eventname,textcolor,bgcolor,size){
