--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<center><h1>Kasper</h1>
 <div id="timerbox"></div></center>
-	<img src="oliver.gif" alt="Flowers in Chania"><img src="putin.gif" alt="Flowers in Russia">
+	<img src="oliver.gif" alt="Flowers in Chania" width="500" height="600"><img src="putin.gif" alt="Flowers in Russia" width="500" height="600">
 <!--<script type="text/javascript" src="http://www.raknatid.se/ner/yourtimer.js"></script>-->
 	<script type="text/javascript">
 	function setTimer(year,month,day,hour,minute,eventname,textcolor,bgcolor,size){
