--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 	<center><h1>Kasper</h1>
-<div id="timerbox"></div></center>
-	<img src="oliver.gif" alt="Flowers in Chania" width="500" height="600"><img src="putin.gif" alt="Flowers in Russia" width="500" height="600">
+<div id="timerbox"></div></center><br><br>
+	<img src="oliver.gif" alt="Flowers in Chania" width="600" height="500"><img src="putin.gif" alt="Flowers in Russia" width="600" height="500">
 <!--<script type="text/javascript" src="http://www.raknatid.se/ner/yourtimer.js"></script>-->
 	<script type="text/javascript">
 	function setTimer(year,month,day,hour,minute,eventname,textcolor,bgcolor,size){
