--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 <body>
 	<center><h1>Kasper</h1>
 <div id="timerbox"></div></center><br><br>
-	<img src="oliver.gif" alt="Flowers in Chania" width="900" height="500"><img src="putin.gif" alt="Flowers in Russia" width="900" height="500">
+	<img src="oliver.gif" alt="Flowers in Chania" width="900" height="500"><img src="putin.gif" alt="Flowers in Russia" width="900" height="500"><img src="vr.gif" alt="Flowers in America" width="900" height="500">
+	<a href="https://www.freejarvis.org" id="support">Donaté to my patrijon</a>
+	
+	
+	
+	
+	
+	
+	
 <!--<script type="text/javascript" src="http://www.raknatid.se/ner/yourtimer.js"></script>-->
 	<script type="text/javascript">
 	function setTimer(year,month,day,hour,minute,eventname,textcolor,bgcolor,size){
