--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
 		color: black;
 		background-color: red;
 	}
+	#support {
+		size: 400px;
+		color: red;
+		background-color: black;
+	}
 	</style>
 </head>
 <body>
-	<center><h1>Kasper</h1>
+	<center><h1>Studenten Yeah</h1>
 <div id="timerbox"></div></center><br><br>
 	<img src="oliver.gif" alt="Flowers in Chania" width="900" height="500"><img src="putin.gif" alt="Flowers in Russia" width="900" height="500"><img src="vr.gif" alt="Flowers in America" width="900" height="500">
-	<a href="https://www.freejarvis.org" id="support">Donaté to my patrijon</a>
+	<img src="wallbit.jpg" alt="Flowers in China" width="900" height="500">
+	<br><a href="https://www.freejarvis.org" id="support">Donaté to my patrijon</a>
 	
 	
 	
