--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 </head>
 <body>
 	<center><h1>Studenten Yeah</h1>
-<div id="timerbox"></div></center><br><br>
-	<img src="oliver.gif" alt="Flowers in Chania" width="900" height="500"><img src="putin.gif" alt="Flowers in Russia" width="900" height="500"><img src="vr.gif" alt="Flowers in America" width="900" height="500">
-	<img src="wallbit.jpg" alt="Flowers in China" width="900" height="500"><audio src="music.mp3" controls>
+<div id="timerbox"></div></center><audio src="music.mp3" controls>
 <p>If you are reading this, it is because your browser does not support the audio element.</p>
-</audio>
+</audio><br><br>
+	<img src="oliver.gif" alt="Flowers in Chania" width="900" height="500"><img src="putin.gif" alt="Flowers in Russia" width="900" height="500"><img src="vr.gif" alt="Flowers in America" width="900" height="500">
+	<img src="wallbit.jpg" alt="Flowers in China" width="900" height="500">
+	
+	<img src="smoke.gif" alt="Flowers in Amsterdam" width="900" height="500"><img src="spin.gif" alt="Flowers in Spin" width="900" height="500">
 	<br><a href="https://www.freejarvis.org" id="support">Donaté to my patrijon</a>
 	
 	
