--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="wallbit.jpg" alt="Flowers in China" width="900" height="500"></a>
 	
 	<img src="smoke.gif" alt="Flowers in Amsterdam" width="900" height="500"><img src="spin.gif" alt="Flowers in Spin" width="900" height="500">
-	<br><a href="https://www.freejarvis.org" id="support">Donaté to my patrijon</a>
+	<br><a href="https://www.freejarvis.org" target="_blank" id="support">Donaté to my patrijon</a>
 	
 	
 	
