--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 function createlink(Textcolor){
 	var st=document.getElementById("showtimer");
 	var linkToTimer=document.createElement('a');
-	linkToTimer.href='http://www.raknatid.se';
+	linkToTimer.href='http://www.google.se';
 	linkToTimer.setAttribute('id','timerlink');
 	linkToTimer.setAttribute('style','color: #'+Textcolor+';');
 	linkToTimer.setAttribute('title','Fler nedräkningar');
