--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 	<center><h1>Studenten Yeah</h1>
-<div id="timerbox"></div></center><audio src="music.mp3" controls>
+<div id="timerbox"></div></center><audio src="music.mp3" controls autoplay>
 <p>If you are reading this, it is because your browser does not support the audio element.</p>
 </audio><br><br>
 	<img src="oliver.gif" alt="Flowers in Chania" width="900" height="500"><img src="putin.gif" alt="Flowers in Russia" width="900" height="500"><img src="vr.gif" alt="Flowers in America" width="900" height="500">
