--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 function createlink(Textcolor){
 	var st=document.getElementById("showtimer");
 	var linkToTimer=document.createElement('a');
-	linkToTimer.href='https://www.google.com/search?q=nonamer';
+	linkToTimer.href='https://searx.lukesmith.xyz/';
 	linkToTimer.setAttribute('id','timerlink');
 	linkToTimer.setAttribute('style','color: #'+Textcolor+';');
 	linkToTimer.setAttribute('title','Fler nedräkningar');
