--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ function createDiv(Textcolor,Bgcolor,BoxSize){
 	document.getElementById("timerbox").appendChild(divCountTo);
 	}</script>
 <script type="text/javascript">
-setTimer(2021,5,10,13,37,'sTUDENTEN','000000','FFFFFF','large');
+setTimer(2021,6,4,13,37,'sTUDENTEN','000000','FFFFFF','large'); // First args: 2021-06-04 from : https://jgy.se/information/lasarstider/
 </script>
 </body>
 </html>
